force-app/main/default/objects/Customer_Bio__c/Customer_Bio__c.object-meta.xml
<CustomObject>
    <label>Customer Bio</label>
    <nameField>
        <label>Customer Bio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Bio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>