force-app/main/default/objects/Customer_Bio__c/fields/Bio_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Bio_Highlights__c</fullName>
    <label>Bio Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>