force-app/main/default/objects/Customer_Bio__c/fields/Executive_Briefing__c.field-meta.xml
<CustomField>
    <fullName>Executive_Briefing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Briefing</label>
    <referenceTo>Executive_Briefing__c</referenceTo>
    <relationshipLabel>Customer Bio</relationshipLabel>
    <relationshipName>Customer_Bio</relationshipName>
    <type>Lookup</type>
</CustomField>